Closed
Bug 1543425
Opened 6 years ago
Closed 6 years ago
Calling createOffer then transceiver.stop() on a just-added transceiver can cause nullptr crashes
Categories
(Core :: WebRTC: Signaling, defect, P1)
Core
WebRTC: Signaling
Tracking
()
RESOLVED
FIXED
mozilla68
Tracking | Status | |
---|---|---|
firefox68 | --- | fixed |
People
(Reporter: bwc, Assigned: bwc)
Details
Attachments
(2 files)
No description provided.
Assignee | ||
Comment 1•6 years ago
|
||
Assignee | ||
Comment 2•6 years ago
|
||
Depends on D26931
Assignee | ||
Comment 3•6 years ago
|
||
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4e44a4a0495a
Part 0: Test-case for the bug. r=jib
https://hg.mozilla.org/integration/autoland/rev/90786b7142a8
Part 1: Ensure that just-added (and just-stopped) transceivers do not have their m-section recycled just because that m-section was disabled last negotiation. r=mjf
Comment 5•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/4e44a4a0495a
https://hg.mozilla.org/mozilla-central/rev/90786b7142a8
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox68:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/16508 for changes under testing/web-platform/tests
Upstream PR merged
You need to log in
before you can comment on or make changes to this bug.
Description
•