Bug 1543425 - Part 1: Ensure that just-added (and just-stopped) transceivers do not have their m-section recycled just because that m-section was disabled last negotiation. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D26932